--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -12,11 +12,17 @@
     background-color: paleturquoise;
 }
 
-.timer {
+.timer  {
     float: right;
     font-size: 30px;
     border: 3px solid navy;
     box-shadow: 0 0 10px rgb(0,0,0,0.5);
+    background-color: paleturquoise;
+}
+
+.time {
+    float: right;
+    font-size: 30px;
     background-color: paleturquoise;
 }
 
