--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -5,7 +5,8 @@
     background-color: silver;
 }
 
-.highscore {
+.highscore, .reset {
+    color: black;
     font-size: 30px;
     border: 3px solid navy;
     box-shadow: 0 0 10px rgb(0,0,0,0.5);
