--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -38,7 +38,17 @@
   
 }
 
-.st-btn, .guess, .submit {
+.st-btn, .submit {
+    font-weight: bold;
+    font-size: medium;
+    text-align: center;
+    width: 120px;
+    height: 40px;
+    background-color: rgb(18, 131, 14);
+    border: 3px solid rgb(8, 104, 182);
+    box-shadow: 0 0 15px rgb(0,0,0,0.5);
+}
+.guess {
     font-weight: bold;
     font-size: medium;
     text-align: center;
@@ -54,4 +64,8 @@
     height: 30px;
     font-weight: bold;
     font-size: large;
+}
+
+h3 {
+    display: inline-flex;
 }
